Exclude Minecraft 1.19 from being patched. Fix building on Java 8.